# detect-potato

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: gcc-test.yml
demo/: general.c
